🔧 chore(App.svelte): reorder imports to improve readability and maintain consistency 🔧 chore(app.css): remove unnecessary overflow-y property from body to fix scrolling issue 🔧 chore(Planner.svelte): remove unnecessary flex class from .flex to simplify styling

--- a/ui/src/app.css
+++ b/ui/src/app.css
@@ -16,8 +16,6 @@
 
 body {
     margin: 0;
-    overflow-y: overlay;
-    overflow-x: hidden;
 }
 
 body::-webkit-scrollbar {
